add revuc route to tsconfig (its broken for some reason dontn touch if you dont know whats happening here)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@revuc-frontend-2026/*": ["./*"]
     }
   },
   "include": [
