--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,13 @@
     "incremental": true,
     "plugins": [
       {
-        "name": "next",
-      },
+        "name": "next"
+      }
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@revuc-frontend-2026/*": ["./*"],
-    },
+      "@revuc-frontend-2026/*": ["./*"]
+    }
   },
   "include": [
     "next-env.d.ts",
@@ -33,7 +33,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
-    "**/*.mts",
+    "**/*.mts"
   ],
-  "exclude": ["node_modules"],
+  "exclude": ["node_modules"]
 }
