--- a/package.json
+++ b/package.json
@@ -19,14 +19,18 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/pg": "^8.16.0",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.45.1",
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "mailgun.js": "^12.6.1",
     "next": "^16.1.2",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -42,6 +46,7 @@
     "@types/react-dom": "^19",
     "@types/three": "^0.129.2",
     "daisyui": "^5.5.5",
+    "drizzle-kit": "^0.31.8",
     "oxfmt": "^0.24.0",
     "oxlint": "^1.39.0",
     "tailwindcss": "^4",
