--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.544.0",
     "mailgun.js": "^12.6.1",
-    "next": "^16.1.2",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "split-type": "^0.3.4",
     "tailwind-merge": "^3.4.0",
     "three": "^0.129.0"
