--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ogl": "^1.0.11",
     "pg": "^8.16.3",
     "qrcode": "^1.5.4",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "split-type": "^0.3.4",
